//protoc --go_out=plugins=grpc:. *.proto

syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.lanlian.rpc.adver";
option java_outer_classname = "AdverProto";
option objc_class_prefix = "Grpc";

package adv;

// The Id service definition.
service Advertisement {
    rpc NewAdvertisement(AdvertisementRequest) returns (AdvertisementReply) {}            //添加新广告
    rpc UpdateAdvertisement(AdvertisementRequest) returns (AdvertisementReply) {}         //修改广告
    rpc GetAdvertisement(AdvertisementRequest) returns (AdvertisementReply) {}            //app获取广告
    rpc GetAllAdvertisement(AdvertisementRequest) returns (MapAdvertisementReply) {}      //后台获取全部广告信息
    rpc DelAdvertisement(AdvertisementRequest) returns (AdvertisementReply) {}            //删除广告
}

message AdvertisementRequest {
    string name = 1;
    string md5 = 2;
    int64 startTime = 3;
    int64 endTime = 4;
    string source = 5;
    string fileName = 6;
    string fileUrl = 7;
    int32 state = 8;
    string advertiser = 9;
    int32 id = 10;
    string signature = 11;
    string advUrl = 12;
    int32 page = 13;
    int32 count = 14;
    int64 tid = 15;
}

message AdvertisementReply {
    string name = 1;
    string md5 = 2;
    int64 startTime = 3;
    int64 endTime = 4;
    string source = 5;
    string fileUrl = 6;
    int32 state = 7;
    string advertiser = 8;
    int32 errorCode = 9;
    string signature = 10;
    int32 id = 11;
    string advUrl = 12;
    int64 tid = 13;
    string fileName = 14;
}

message MapAdvertisementReply {
    repeated AdvertisementReply advs =1;
    int32 errorCode = 2;
    int32 totalCount = 3;
}